[project]
name = "undefined"
version = "0.1.1"
description = "Simply a global object that act as undefined."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
]
authors = [
    { name = "Matthias Bussonnier", email = "bussonniermatthias@gmail.com" },
    { name = "Karataev Pavel", email = "karataev.pavel@gmail.com" },
]
dependencies = ["typing-extensions >= 4.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit >= 3.7.0",
    "pre-commit-hooks >= 4.5.0",
    "pyright >= 1.1.356",
    "pytest >= 8.1.1",
    "ruff >= 0.3.4",
]
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]
preview = true
